Wiele zmian po padzie alfreda.